# python_skeleton

./: .flake8  .gitignore  CHANGELOG  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml
docs/: conf.py  index.rst  reference.rst
python_skeleton/project_name/: __init__.py  console.py
tests/: __init__.py  test_console.py
utils/bash-scripts/: install-pdm.sh  install-poetry.sh
