[tool.pdm.build]
includes = [
    "python_skeleton",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.coverage.paths]
source = ["python_skeleton", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["python_skeleton"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 99

[tool.mypy]
ignore_missing_imports = true

[project]
name = "python-skeleton"
version = "0.1.0"
description = ""
authors = [
    {name = "e.nakhle", email = "elio.nakhle@agile-robots.com"},
]
dependencies = [
    "click<9.0.0,>=8.1.3",
    "nox>=2023.4.22",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = {text = "MIT"}

[project.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
nox = "^2022.8.7"
black = "^22.8.0"
flake8 = "^5.0.4"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.9.23"
flake8-import-order = "^0.18.1"
mypy = "^0.981"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
Sphinx = "^5.2.2"
sphinx-autodoc-typehints = "^1.19.4"
codecov = "^2.1.12"
isort = "^5.10.1"
flake8-annotations = "^2.9.1"

[project.group.dev.dependencies.coverage]
extras = ["toml"]
version = "^6.4.4"

[project.scripts]
project-name = "python_skeleton.project_name.console:main"
