[tool.pdm.build]
includes = [
    "python_skeleton",
]

[tool.pdm.dev-dependencies]
nox = []
dev = [
    "nox>=2023.4.22",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "flake8>=6.0.0",
    "pyproject-flake8>=6.0.0.post1",
    "mypy>=1.4.1",
    "Sphinx>=7.0.1",
    "sphinx-autodoc-typehints>=1.23.3",
    "codecov>=2.1.13",
    "isort>=5.12.0",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.coverage.paths]
source = ["python_skeleton", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["python_skeleton"]

[tool.coverage.report]
show_missing = true

[tool.flake8]
select = "ANN,B,B9,BLK,C,D,DAR,E,F,I,S,W"
docstring-convention = "google"
max-complexity = 10
max-line-length = 99

[tool.black]
line-length = 99

[tool.mypy]
ignore_missing_imports = true

[project]
name = "python-skeleton"
version = "0.1.0"
description = ""
authors = [
    {name = "e.nakhle", email = "elio.nakhle@agile-robots.com"},
]
dependencies = [
    "click>=8.1.3"
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = {text = "MIT"}
